fix(datatable): add Horizontal scrollto datatable, width to each column

--- a/src/app/components/planner-list/planner-list.component.less
+++ b/src/app/components/planner-list/planner-list.component.less
@@ -3,6 +3,7 @@
 //@import '../../../../node_modules/@swimlane/ngx-datatable/release/index.css';
 //@import '../../../../node_modules/@swimlane/ngx-datatable/release/themes/material.css';
 //@import '../../../../node_modules/@swimlane/ngx-datatable/release/assets/icons.css';
+//@import './datatable.component.css';
 
 .f8-wi-container {
   .lock-overlay-list {
@@ -208,6 +209,16 @@ button.btn.btn-link.dropdown-toggle:focus {
 
 .datatable-header {
   overflow: visible !important;
+}
+
+.fullscreen {
+  position: absolute !important;
+  height: auto !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .datatable-body-cell ,
